--- a/src/app/reactive/basicos/basicos.component.html
+++ b/src/app/reactive/basicos/basicos.component.html
@@ -1,1 +1,63 @@
-<p>basicos works!</p>
+<h2>Template Básicos</h2>
+<hr>
+
+<div class="row">
+  <div class="col">
+    <form (ngSubmit)="guardar()" [formGroup]="miFormulario">
+
+      <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label">Producto</label>
+        <div class="col-sm-9">
+          <input type="text" class="form-control" placeholder="Producto" formControlName="nombre">
+          <span *ngIf="camposInvalidos('nombre')" class="form-text text-danger">Debe de ser 3 letras</span>
+        </div>
+      </div>
+
+      <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label">Precio</label>
+        <div class="col-sm-9">
+          <input type="number" class="form-control" placeholder="Precio" formControlName="precio">
+          <span *ngIf="camposInvalidos('precio')" class="form-text text-danger">Debe ser 0 o mayor</span>
+        </div>
+      </div>
+
+      <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label">Existencias</label>
+        <div class="col-sm-9">
+          <input type="number" class="form-control" placeholder="Existencias" formControlName="existencias">
+          <span *ngIf="camposInvalidos('existencias')" class="form-text text-danger">Debe ser 0 o mayor</span>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <button type="submit" class="btn btn-primary float-end">Guardar</button>
+        </div>
+      </div>
+
+    </form>
+  </div>
+</div>
+
+
+<div class="row">
+  <div class="col">
+    <span>Valid</span>
+    <pre>{{miFormulario.valid}}</pre>
+
+    <span>Pristine</span>
+    <pre>{{miFormulario.pristine}}</pre>
+
+
+  </div>
+
+  <div class="col">
+    <span>Touched</span>
+    <pre>{{miFormulario.touched}}</pre>
+
+    <span>Value</span>
+    <pre>{{miFormulario.value | json}}</pre>
+  </div>
+
+
+</div>
