--- a/src/app/reactive/dinamicos/dinamicos.component.html
+++ b/src/app/reactive/dinamicos/dinamicos.component.html
@@ -1,1 +1,52 @@
-<p>dinamicos works!</p>
+<h2>Template: <small>Dinamicos</small></h2>
+<hr>
+
+<form (submit)="guardar()" [formGroup]="miFormulario">
+
+  <div class="mb-3 row">
+    <label class="col-sm-3 col-form-label">Nombre</label>
+    <div class="col-sm-9">
+      <input type="text" class="form-control" placeholder="Nombre" formControlName="nombre">
+      <span *ngIf="camposInvalidos('nombre')" class="form-text text-danger">Este campo es obligatorio</span>
+    </div>
+  </div>
+
+  <div class="mb-3 row">
+    <label class="col-sm-3 col-form-label">Agregar</label>
+    <div class="col-sm-9">
+      <div class="input-group">
+        <input class="form-control" placeholder="Agregar Juego" [formControl]="nuevoFavorito"
+          (keyup.enter)="agregarFavorito()">
+        <button class="btn btn-outline-primary" type="button" (click)="agregarFavorito()">Agregar</button>
+      </div>
+    </div>
+  </div>
+
+  <div class="mb-3 row">
+    <label class="col-sm-3 col-form-label">Favoritos</label>
+    <div class="col-sm-9" formArrayName="favoritos">
+      <div class="input-group mb-1" *ngFor="let item of favoritosArr.controls; let i = index">
+        <input class="form-control" [formControlName]="i">
+        <button type="button" class="btn btn-outline-danger" (click)="eliminarCampo(i)">Eliminar</button>
+      </div>
+
+    </div>
+  </div>
+
+
+
+  <div class="row">
+    <div class="col-sm-12">
+      <button [disabled]="miFormulario.invalid" type="submit" class="btn btn-dark float-end">Guardar</button>
+    </div>
+  </div>
+
+</form>
+
+<span>Valid</span>
+<br>
+<pre>{{miFormulario.valid}}</pre>
+<br>
+<span>Value</span>
+<br>
+<pre> {{miFormulario.value | json}} </pre>
