Validaciones manuales y asincronas

--- a/src/app/shared/sidemanu/sidemanu.component.html
+++ b/src/app/shared/sidemanu/sidemanu.component.html
@@ -1,13 +1,20 @@
-<h2>Template</h2>
+<h2>Validaciones</h2>
 <hr>
-
 <ul class="list-group">
-  <li  *ngFor="let item of templateMenu" routerLinkActive="active" [routerLink]="[item.ruta]" class="list-group-item pointer"> {{item.texto}} </li>
+  <li *ngFor="let item of authMenu" routerLinkActive="active" [routerLink]="[item.ruta]"
+    class="list-group-item pointer"> {{item.texto}} </li>
+</ul>
+
+<h2 class="mt-5">Template</h2>
+<hr>
+<ul class="list-group">
+  <li *ngFor="let item of templateMenu" routerLinkActive="active" [routerLink]="[item.ruta]"
+    class="list-group-item pointer"> {{item.texto}} </li>
 </ul>
 
 <h2 class="mt-5">Reactive</h2>
 <hr>
-
 <ul class="list-group">
-  <li  *ngFor="let item of reactiveMenu" routerLinkActive="active" [routerLink]="[item.ruta]" class="list-group-item pointer"> {{item.texto}} </li>
+  <li *ngFor="let item of reactiveMenu" routerLinkActive="active" [routerLink]="[item.ruta]"
+    class="list-group-item pointer"> {{item.texto}} </li>
 </ul>
